# llm-nonsense-commands-codex

./: .resource_finder_complete  README.md  REPORT.md  literature_review.md  planning.md  pyproject.toml  resources.md
.idea-explorer/: idea.yaml  pipeline_results.json  pipeline_state.json
code/: README.md
datasets/: .gitignore  README.md
logs/: execution_codex_transcript.jsonl  research_prompt.txt  resource_finder_codex_transcript.jsonl  resource_finder_prompt.txt  session_instructions.txt
papers/: README.md
results/: aggregated_metrics.csv  aggregated_metrics.json  analysis.json  metrics.jsonl  summary.json
src/: analyze_results.py  run_experiments.py
src/research_workspace/: __init__.py
