[project]
name = "research-workspace"
version = "0.1.0"
description = "Research workspace for experiments"
requires-python = ">=3.10"
dependencies = [
    "datasets>=4.4.1",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "scipy>=1.15.3",
    "seaborn>=0.13.2",
    "sentence-transformers>=2.7.0",
    "torch>=2.3.1,<2.4",
    "tqdm>=4.67.1",
    "transformers>=4.43.4,<4.44",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/research_workspace"]
